--- a/SurveyAppClient/surveyapp/package.json
+++ b/SurveyAppClient/surveyapp/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.11.0",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "i18next": "^23.2.3",
     "i18next-browser-languagedetector": "^7.0.2",
     "jwt-decode": "^3.1.2",
