Add CORS policy

--- a/SurveyAppServer/API/appsettings.Development.json
+++ b/SurveyAppServer/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=/Users/Andrii/SQLite/SurveyAppDB.db;"
-  }
+  },
+  "FrontendOrigin": "http://localhost:5173"
 }
